--- a/common/open-as.reg.in
+++ b/common/open-as.reg.in
@@ -9,19 +9,19 @@ Windows Registry Editor Version 5.00
 [HKEY_CURRENT_USER\Software\Classes\Applications\cmake.exe\shell\open]
 
 [HKEY_CURRENT_USER\Software\Classes\Applications\cmake.exe\shell\open\command]
-@="\"@CMAKE_USERPROFILE@\\Downloads\\cmake-3.26.1-windows-x86_64\\bin\\cmake.exe\" \"-P %1\""
+@="\"@CMAKE_CMAKE_PATH@\" \"-P %1\""
 
 [HKEY_CURRENT_USER\Software\Classes\cmake_auto_file]
 
 [HKEY_CURRENT_USER\Software\Classes\cmake_auto_file\DefaultIcon]
-@="\"@CMAKE_USERPROFILE@\\Downloads\\cmake-3.26.1-windows-x86_64\\bin\\cmake-gui.exe\",0"
+@="\"@CMAKE_CMAKE_GUI_PATH@\",0"
 
 [HKEY_CURRENT_USER\Software\Classes\cmake_auto_file\shell]
 
 [HKEY_CURRENT_USER\Software\Classes\cmake_auto_file\shell\open]
 
 [HKEY_CURRENT_USER\Software\Classes\cmake_auto_file\shell\open\command]
-@="\"@CMAKE_USERPROFILE@\\Downloads\\cmake-3.26.1-windows-x86_64\\bin\\cmake.exe\" \"-P %1\""
+@="\"@CMAKE_CMAKE_PATH@\" \"-P %1\""
 
 [HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer\FileExts\.cmake]
 
