--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
-        "ms-vscode.cmake-tools"
+        "ms-vscode.cmake-tools",
+        "emmanuelbeziat.vscode-great-icons"
     ]
 }
