--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-    "git.path": "${env:USERPROFILE}\\Downloads\\PortableGit\\bin\\git.exe"
+    "git.path": "${env:USERPROFILE}\\Downloads\\PortableGit\\bin\\git.exe",
+    
+    // Controls the rendering size of tabs in characters. 
+    // If set to auto, the value will be guessed based on the opened file.
+    "editor.tabSize": 4,
+
+    // Controls if the editor will insert spaces for tabs. 
+    // If set to auto, the value will be guessed based on the opened file.
+    "editor.insertSpaces": true
 }
