--- a/.github/workflows/sync-to-azure.yml
+++ b/.github/workflows/sync-to-azure.yml
@@ -3,6 +3,10 @@ name: sync-to-azure
 on: 
   push
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -10,7 +14,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # <-- clone with complete history
-          
+
     # Powershell:  [System.Convert]::ToBase64String([System.Text.Encoding]::ASCII.GetBytes("dirkarnez:MY_PAT"))
       - continue-on-error: true
         run: |
